RESOLVED FIXED 278201
[WebRTC] rtc::Network must be defined before classes that use it as an instance variable
https://bugs.webkit.org/show_bug.cgi?id=278201
Summary [WebRTC] rtc::Network must be defined before classes that use it as an instan...
David Kilzer (:ddkilzer)
Reported 2024-08-15 16:53:03 PDT
rtc::Network must be defined before classes that use it as an instance variable. New build failure with upstream clang: /usr/include/c++/v1/__memory/unique_ptr.h:65:19: error: invalid application of 'sizeof' to an incomplete type 'rtc::Network' 65 | static_assert(sizeof(_Tp) >= 0, "cannot delete an incomplete type"); | ^~~~~~~~~~~ /usr/include/c++/v1/__memory/unique_ptr.h:278:7: note: in instantiation of member function 'std::default_delete<rtc::Network>::operator()' requested here 278 | __ptr_.second()(__tmp); | ^ /usr/include/c++/v1/__memory/unique_ptr.h:248:71: note: in instantiation of member function 'std::unique_ptr<rtc::Network>::reset' requested here 248 | _LIBCPP_HIDE_FROM_ABI _LIBCPP_CONSTEXPR_SINCE_CXX23 ~unique_ptr() { reset(); } | ^ In file included from Source/ThirdParty/libwebrtc/Source/webrtc/p2p/base/wrapping_active_ice_controller.cc:11: In file included from Source/webrtc/p2p/base/wrapping_active_ice_controller.h:18: In file included from Source/webrtc/p2p/base/active_ice_controller_interface.h:16: In file included from Source/webrtc/p2p/base/connection.h:42: Source/webrtc/rtc_base/network.h:192:18: note: in instantiation of member function 'std::unique_ptr<rtc::Network>::~unique_ptr' requested here 192 | class RTC_EXPORT NetworkManagerBase : public NetworkManager { | ^ Source/webrtc/rtc_base/network.h:192:18: note: in implicit destructor for 'rtc::NetworkManagerBase' first required here In file included from Source/ThirdParty/libwebrtc/Source/webrtc/p2p/base/wrapping_active_ice_controller.cc:11: In file included from Source/webrtc/p2p/base/wrapping_active_ice_controller.h:18: In file included from Source/webrtc/p2p/base/active_ice_controller_interface.h:16: In file included from Source/webrtc/p2p/base/connection.h:38: Source/webrtc/p2p/base/port_interface.h:31:7: note: forward declaration of 'rtc::Network' 31 | class Network; | ^ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-15 16:53:16 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-08-15 17:05:27 PDT
David Kilzer (:ddkilzer)
Comment 3 2024-08-15 17:18:06 PDT
Filed upstream WebRTC bug: <https://issues.webrtc.org/issues/360158397>
David Kilzer (:ddkilzer)
Comment 4 2024-08-21 21:35:31 PDT
Committed 282603@main (a0c0389): https://commits.webkit.org/282603@main Reviewed commits have been landed. Closing PR #32275 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.