rtc::Network must be defined before classes that use it as an instance variable <https://bugs.webkit.org/show_bug.cgi?id=278201> <rdar://133994317>

Reviewed by Youenn Fablet.

Fixes the following error when compiling with newer clang:

    Source/webrtc/rtc_base/network.h:192:18: note: in instantiation of member function 'std::unique_ptr<rtc::Network>::~unique_ptr' requested here
      192 | class RTC_EXPORT NetworkManagerBase : public NetworkManager {
          |                  ^
    Source/webrtc/rtc_base/network.h:192:18: note: in implicit destructor for 'rtc::NetworkManagerBase' first required here
    [...]
    In file included from Source/webrtc/p2p/base/connection.h:38:
    Source/webrtc/p2p/base/port_interface.h:31:7: note: forward declaration of 'rtc::Network'
       31 | class Network;
          |       ^
    1 error generated.

* Source/ThirdParty/libwebrtc/Source/webrtc/rtc_base/network.h:
- Move the class definition of rtc::Network above the
  rtc::NetworkManagerBase class to fix the error.

Canonical link: https://commits.webkit.org/282603@main